tests/e2e/semantics/object_index_int.story
a = {"foo": "bar"}
a = a[0]
